- GC unused code. - GC unused id parameter.